feat(styling): styling contract + globals

--- a/packages/ui/theme/pollen.css
+++ b/packages/ui/theme/pollen.css
@@ -29,15 +29,15 @@
   --scale-fluid-10: clamp(6rem, 4.8rem + 4vw, 8rem);
   --scale-fluid-000: clamp(0.625rem, 0.55rem + 0.25vw, 0.75rem);
   --scale-fluid-00: clamp(0.75rem, 0.675rem + 0.25vw, 0.875rem);
-  --width---width-xs: 480px;
-  --width---width-sm: 720px;
-  --width---width-md: 1080px;
-  --width---width-lg: 1440px;
-  --width---width-xl: 2160px;
-  --width---width-min: min-content;
-  --width---width-max: max-content;
-  --width---width-fluid: 100%;
-  --width---width-screen: 100vw;
+  --width-xs: 480px;
+  --width-sm: 720px;
+  --width-md: 1080px;
+  --width-lg: 1440px;
+  --width-xl: 2160px;
+  --width-min: min-content;
+  --width-max: max-content;
+  --width-fluid: 100%;
+  --width-screen: 100vw;
   --radius-100: 100%;
   --radius-xs: 3px;
   --radius-sm: 6px;
@@ -58,16 +58,6 @@
   --shadow-lg: 0 20px 24px -4px rgba(0, 0, 0, 0.1),
     0 8px 8px -4px rgba(0, 0, 0, 0.04);
   --shadow-xl: 0 24px 48px -12px rgba(0, 0, 0, 0.25);
-  --color-primary: #eac07a;
-  --color-primary-content: #3b1d0f;
-  --color-secondary: #6f3d1f;
-  --color-secondary-content: #fdf9ef;
-  --color-accent: #00a619;
-  --color-accent-content: #3b1d0f;
-  --color-base: #fdf9ef;
-  --color-base-100: #faf0da;
-  --color-base-200: #f3ddb5;
-  --color-base-content: #3b1d0f;
   --color-white: #ffffff;
   --color-black: #000000;
   --color-gray: #eee;
