--- a/apps/client/src/app/(home)/home.module.css
+++ b/apps/client/src/app/(home)/home.module.css
@@ -48,8 +48,11 @@
 .sloganContent h1 span {
   color: var(--color-accent);
 }
-.slogan button {
-  display: block;
+.slogan a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: auto;
   color: var(--color-primary);
 }
