--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -83,3 +83,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+input {
+  background-color: transparent;
+  outline: none;
+  color: inherit;
+}
+input::placeholder {
+  color: inherit;
+}
