--- a/apps/client/src/app/(home)/home.module.css
+++ b/apps/client/src/app/(home)/home.module.css
@@ -3,7 +3,7 @@
   font-family: var(--font-fam-accent);
 }
 
-.logo {
+/* .logo {
   margin-left: var(--space-md);
   margin-top: var(--space-xs);
   display: flex;
@@ -22,7 +22,7 @@
 }
 .logo h3 {
   color: var(--color-primary);
-}
+} */
 
 .slogan {
   display: flex;
