--- a/apps/client/src/styles/globals.css
+++ b/apps/client/src/styles/globals.css
@@ -71,6 +71,7 @@ body {
   font-size: 1.6rem;
   line-height: 1.6;
   box-sizing: border-box;
+  background-color: var(--color-base);
 }
 
 button {
