--- a/packages/ui/theme/pollen.css
+++ b/packages/ui/theme/pollen.css
@@ -3,47 +3,23 @@
 * Edit Pollen config to update
 */
 :root {
-  --scale-0: 1rem;
-  --scale-1: 1.125rem;
-  --scale-2: 1.25rem;
-  --scale-3: 1.5rem;
-  --scale-4: 1.875rem;
-  --scale-5: 2.25rem;
-  --scale-6: 3rem;
-  --scale-7: 3.75rem;
-  --scale-8: 4.5rem;
-  --scale-9: 6rem;
-  --scale-10: 8rem;
-  --scale-000: 0.75rem;
-  --scale-00: 0.875rem;
-  --scale-fluid-0: clamp(0.875rem, 0.8rem + 0.25vw, 1rem);
-  --scale-fluid-1: clamp(1rem, 0.925rem + 0.25vw, 1.125rem);
-  --scale-fluid-2: clamp(1.125rem, 1.05rem + 0.25vw, 1.25rem);
-  --scale-fluid-3: clamp(1.25rem, 1.1rem + 0.5vw, 1.5rem);
-  --scale-fluid-4: clamp(1.5rem, 1.275rem + 0.75vw, 1.875rem);
-  --scale-fluid-5: clamp(1.875rem, 1.65rem + 0.75vw, 2.25rem);
-  --scale-fluid-6: clamp(2.25rem, 1.8rem + 1.5vw, 3rem);
-  --scale-fluid-7: clamp(3rem, 2.55rem + 1.5vw, 3.75rem);
-  --scale-fluid-8: clamp(3.75rem, 3.3rem + 1.5vw, 4.5rem);
-  --scale-fluid-9: clamp(4.5rem, 3.6rem + 3vw, 6rem);
-  --scale-fluid-10: clamp(6rem, 4.8rem + 4vw, 8rem);
-  --scale-fluid-000: clamp(0.625rem, 0.55rem + 0.25vw, 0.75rem);
-  --scale-fluid-00: clamp(0.75rem, 0.675rem + 0.25vw, 0.875rem);
   --width-xs: 480px;
   --width-sm: 720px;
-  --width-md: 1080px;
-  --width-lg: 1440px;
-  --width-xl: 2160px;
+  --width-md: 1024px;
+  --width-lg: 1280px;
+  --width-xl: 1440px;
+  --width-2k: 2160px;
   --width-min: min-content;
   --width-max: max-content;
-  --width-fluid: 100%;
+  --width-full: 100%;
   --width-screen: 100vw;
-  --radius-100: 100%;
-  --radius-xs: 3px;
-  --radius-sm: 6px;
+  --radius-px: 1px;
+  --radius-xs: 2px;
+  --radius-sm: 4px;
   --radius-md: 8px;
-  --radius-lg: 12px;
-  --radius-xl: 16px;
+  --radius-default: 16px;
+  --radius-lg: 32px;
+  --radius-xl: 64px;
   --radius-full: 9999px;
   --blur-xs: blur(4px);
   --blur-sm: blur(8px);
@@ -61,18 +37,26 @@
   --color-white: #ffffff;
   --color-black: #000000;
   --color-gray: #eee;
-  --color-info: #60a2fa;
-  --color-info-bg: #dbeafe;
-  --color-info-content: #173154;
-  --color-success: #4ade7d;
-  --color-success-bg: #dcfce7;
-  --color-success-content: #052e13;
-  --color-warning: #fae715;
-  --color-warning-bg: #fef9c3;
-  --color-warning-content: #423d06;
-  --color-danger: #f87171;
-  --color-danger-bg: #fee2e2;
-  --color-danger-content: #450a0a;
+  --color-info-lighter: #dbe9fe;
+  --color-info-light: #93c3fd;
+  --color-info-default: #3b7ef6;
+  --color-info-dark: #1d4ad8;
+  --color-info-darker: #1e388a;
+  --color-succes-lighter: #dcfce6;
+  --color-succes-light: #86efaa;
+  --color-succes-default: #22c55b;
+  --color-succes-dark: #15803b;
+  --color-succes-darker: #14532c;
+  --color-warning-lighter: #fcfec3;
+  --color-warning-light: #fdf547;
+  --color-warning-default: #eace08;
+  --color-warning-dark: #a17407;
+  --color-warning-darker: #714a12;
+  --color-danger-lighter: #fee2e2;
+  --color-danger-light: #fca5a5;
+  --color-danger-default: #ef4444;
+  --color-danger-dark: #b91c1c;
+  --color-danger-darker: #7f1d1d;
   --grid-2: repeat(2, minmax(0, 1fr));
   --grid-3: repeat(3, minmax(0, 1fr));
   --grid-4: repeat(4, minmax(0, 1fr));
