--- a/apps/client/src/app/shop/_components/category-filter/styles.module.css
+++ b/apps/client/src/app/shop/_components/category-filter/styles.module.css
@@ -1,7 +1,7 @@
 .categoryFilter {
   display: flex;
   justify-content: space-evenly;
-  background-color: var(--color-base-200);
+  background-color: var( --color-base-dark);
   padding: var(--space-sm) 0;
 
   @media screen and (min-width: 64em) {
@@ -14,6 +14,10 @@
   padding: var(--space-xs);
   border-radius: var(--radius-full);
 }
+.categoryFilter a:hover {
+  background-color: var(--color-base-default);
+  transition: background-color 0.3s;
+}
 .categoryFilter a svg {
   @media screen and (min-width: 45em) {
     width: 3.2rem;
@@ -22,5 +26,5 @@
 }
 
 .categoryFilter .active {
-  background-color: var(--color-base-100);
+  background-color: var(--color-base-light);
 }
