--- a/apps/client/src/shared/components/buy-add-remove-buttons/styles.module.css
+++ b/apps/client/src/shared/components/buy-add-remove-buttons/styles.module.css
@@ -2,11 +2,14 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
-.buttons button {
-  flex: 1;
-  cursor: pointer;
+.buttons > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
