--- a/apps/client/src/shared/components/loader/styles.module.css
+++ b/apps/client/src/shared/components/loader/styles.module.css
@@ -18,7 +18,7 @@
   width: 50px;
   aspect-ratio: 1;
   --_c: no-repeat
-    radial-gradient(farthest-side, var(--color-primary) 92%, #0000);
+    radial-gradient(farthest-side, var(--color-primary-light) 92%, #0000);
   background:
     var(--_c) top,
     var(--_c) left,
