--- a/apps/client/src/shared/components/reviews/styles.module.css
+++ b/apps/client/src/shared/components/reviews/styles.module.css
@@ -1,7 +1,7 @@
 .reviews svg {
-  color: var(--color-secondary);
+  color: var(--color-primary-darker);
 }
 
 .reviews .filled {
-  fill: var(--color-primary);
+  fill: var(--color-primary-light);
 }
