--- a/apps/client/src/app/shop/layout.module.css
+++ b/apps/client/src/app/shop/layout.module.css
@@ -173,3 +173,10 @@
   justify-content: space-between;
   border-top: 1px solid var(--color-base-dark);
 }
+
+.footer {
+  background-color: var(--color-base-dark);
+  padding: var(--space-sm);
+  text-align: center;
+  font-size: var(--text-xs);
+}
